--- a/Css_html/04_cascade_specificity_inheritance/inheritance.html
+++ b/Css_html/04_cascade_specificity_inheritance/inheritance.html
@@ -55,6 +55,9 @@
             font-family: unset;
             color: unset;
         }
+        .p1{
+            font-family: 'Gill Sans', 'Gill Sans MT';
+        }
     </style>
 </head>
 <body>
@@ -69,6 +72,7 @@
 
         <!-- Example with "initial" -->
         <div class="initial-example">
+            <h4>Im red</h4>
             <p>This text is initially red.</p>
             <p>This text inherits the initial color (browser default).</p>
         </div>
@@ -80,8 +84,9 @@
         </div>
     </div>
     <h2>Using the "unset" CSS Keyword</h2>
-
+    <p class="p1">sh</p>
     <div class="unset-example">
+        <h4>Hey hi</h4>
         <p>This text has a custom font-family (Arial, sans-serif) and color (red).</p>
         <p>These properties are reset to their natural/inherited values.</p>
     </div>
