--- a/css/01_font_text_color_properties/font_text_color_properties_index.html
+++ b/css/01_font_text_color_properties/font_text_color_properties_index.html
@@ -22,7 +22,7 @@
         /* Color Properties */
         .color-example {
             color: #FF5733; /* Text color */
-            background-color: #EDEDED; /* Background color */
+            background-color: #220909; /* Background color */
             
         }
     </style>
@@ -41,9 +41,9 @@
     </div>
 
     <!-- Color Properties Example -->
-    <div class="color-example">
-        <p>Color Properties Example</p>
-        <p>This text is in a custom color (#FF5733), has a light gray background (#EDEDED), and a 2px dark gray border (#333).</p>
+    <div >
+        <p class="color-example">Color Properties Example</p>
+        <p class="color-example">This text is in a custom color (#FF5733), has a light gray background (#EDEDED), and a 2px dark gray border (#333).</p>
     </div>
 </body>
 </html>
