--- a/css/11_grid/grid_placement/demo3.html
+++ b/css/11_grid/grid_placement/demo3.html
@@ -38,6 +38,19 @@
     .astronaut {
       background-color: #03989E;
       grid-area: 2 / 1 / 3 / 3; 
+
+      /* 
+      The starting row position.
+      The starting column position.
+      The ending row position.
+      The ending column position.*/
+
+      /*
+      The item starts at row 2 (second row from the top).
+      The item starts at column 1 (first column from the left).
+      The item ends at row 3 (third row from the top).
+      The item ends at column 3 (third column from the left).
+      */
     }
   </style>
 </head>
