--- a/css/11_grid/grid_placement/demo4.html
+++ b/css/11_grid/grid_placement/demo4.html
@@ -42,8 +42,13 @@
 
     .book {
       background-color: #E5833180;
-      grid-area: 1 / 2 / 3 / 4;
+      grid-area: 2/ 3 / 3 / 4;
     }
+     /* 
+      The starting row position.
+      The starting column position.
+      The ending row position.
+      The ending column position.*/
   </style>
 </head>
 
