--- a/css/11_grid/grid_placement/demo2.html
+++ b/css/11_grid/grid_placement/demo2.html
@@ -32,7 +32,8 @@
 
     .cowboy {
       background-color: #00B9FF;
-      grid-column: span 2;
+      grid-column-start: 1;
+      grid-column-end : 3;
     }
 
     .astronaut {
