--- a/Bootstrap/01_layout/index.html
+++ b/Bootstrap/01_layout/index.html
@@ -11,7 +11,7 @@
             height: 10vh;
             background-color: aquamarine;
             border: 2px solid black;
-            margin: 2px;
+            margin: 0px;
         }
     </style>
 </head>
@@ -22,8 +22,29 @@
             <div class="col-2 back-ground">02</div>
             <div class="col-3 back-ground">03</div>
             <div class="col-4 back-ground">04</div>
-            <div class="col-5 back-ground">05</div>
-            <div class="col-6 back-ground">06</div>
+            <div class="col-2 back-ground">02</div>
+            <div class="col-5 back-ground">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-6 back-ground">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+            </div>
             <div class="col-7 back-ground">07</div>
             <div class="col-8 back-ground">08</div>
             <div class="col-9 back-ground">09</div>
