--- a/css/05_pesudo_class/pesudo_elements_display.html
+++ b/css/05_pesudo_class/pesudo_elements_display.html
@@ -24,7 +24,7 @@
         /* Display*/
         p{
             border: 3px solid black;
-            display: block;  /*inline-block */
+            display: inline;  /*inline-block */
         }
         /* block 
         new line
@@ -34,7 +34,15 @@
 
         i{
             border: 3px solid black;
-            display: inline;
+            display: block;
+        }
+
+        h1{
+            border: 3px solid black;
+            border-color: blue;
+            display: inline-block;
+            height: 100px;
+            width: 100px;
         }
 
         /* inline
@@ -58,5 +66,7 @@
     <p>Hello</p>
 
     <i>Hello</i>
+    <h1>HI</h1>
+    <h1>There</h1>
 </body>
 </html>
