--- a/css/11_grid/assign_01/solution.html
+++ b/css/11_grid/assign_01/solution.html
@@ -9,6 +9,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-auto-flow: row;
     }
 
     .white {
@@ -27,17 +28,17 @@
 
 <body>
   <div class="container">
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
+    <div class="white">1</div>
+    <div class="black">2</div>
+    <div class="white">3</div>
+    <div class="black">4</div>
+    <div class="white">5</div>
+    <div class="black">6</div>
+    <div class="white">7</div>
+    <div class="black">8</div>
+    <div class="black">9</div>
+    <div class="white">10</div>
+    <div class="black">11</div>
     <div class="white"></div>
     <div class="black"></div>
     <div class="white"></div>
