--- a/Bootstrap/assignment_01/solution.html
+++ b/Bootstrap/assignment_01/solution.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
   <div class="flex-container">
     <div class="card" style="width: 18rem;">
       <img src="./flower.jpg" class="card-img-top" alt="sunflower">
@@ -30,6 +33,9 @@
       </div>
     </div>
   </div>
+</div>
+</div>
+</div>
 </body>
 
 </html>
