--- a/css/07_positions/z_index.html
+++ b/css/07_positions/z_index.html
@@ -7,7 +7,7 @@
         .box {
             width: 100px;
             height: 100px;
-            position: absolute;
+            position: sticky;
         }
 
         .box1 {
