--- a/css/08_float/index.html
+++ b/css/08_float/index.html
@@ -40,6 +40,6 @@
     <div class="box right">Right</div>
     <div class="box clear">Clear</div>
    
-    <p>This is a demonstration of CSS float properties including <code>left</code>, <code>right</code>, <code>clear</code>, <code>top</code>, and <code>bottom</code>.</p>
+    <p>This is a demonstration of CSS float properties including <code>left</code>, <code>right</code>, <code>clear</code>.</p>
 </body>
 </html>
