--- a/JavaScript/11/DOM_Modification/dom_modification_index.html
+++ b/JavaScript/11/DOM_Modification/dom_modification_index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/dom_modification.js" defer></script>
+    <script src="dom_modification.js" defer></script>
 </head>
 <body>
-    <h3 class="inner_text">Original Text</h3>
-
-    <h3 class = "inner_html"></h3>
-
+    <p id="demo">This is some text.</p>
+    
+    <div id="container">
+        <p>This is a <strong>paragraph</strong>.</p>
+    </div>
+    
     <span id="one">5</span>
     <span id="two">2</span>
     <span id="operation">Addition</span>
