--- a/JavaScript/11/Click_Events/index.html
+++ b/JavaScript/11/Click_Events/index.html
@@ -8,19 +8,12 @@
 </head>
 <body>
     <h1>Hello World</h1>
-
     <button id="clickButton">Click Me</button>
-
-    <h3 onclick = "change()"> onclick </h3>
-
-
+    <h3 id="h3Element">Click me to change font size</h3>
     <h1 id="action">Actions</h1>
-    <button  onclick="changeclr()">Change color</button>
-    <button  onclick="changeBgclr()">Change BG color</button>
-
-
-    
+    <button id="changeColorButton">Change color</button>
+    <button id="changeBgColorButton">Change BG color</button>
     <p id="element">This is a sample text.</p>
-    <button id="remove">Click to Change Style</button>
+    <button id="changeStyleButton">Click to Change Style</button>
 </body>
 </html>
