--- a/Html_codes/09_attributes_tags/attributes.html
+++ b/Html_codes/09_attributes_tags/attributes.html
@@ -15,6 +15,7 @@
 <body>
     <!-- ID Attribute -->
     <h1 id="main-heading" style="text-align:center">Main Heading</h1>
+    <h1 id="main-heading-2" style="text-align:center">Main </h1>
     <!-- Description: The 'id' attribute is used to uniquely identify an element in the document. It is used for styling or JavaScript interactions. -->
 
     <!-- Class Attribute -->
