--- a/JavaScript/04/DOM_Modification/dom_modification_index.html
+++ b/JavaScript/04/DOM_Modification/dom_modification_index.html
@@ -14,8 +14,8 @@
     </div>
     
     <span id="one">5</span>
-    <span id="two">2</span>
-    <span id="operation">Addition</span>
+    <span id="two">7</span>
+    <span id="operation">abc</span>
     <span id="result"></span>
 </body>
 </html>
