--- a/css/05_pesudo_class/index.html
+++ b/css/05_pesudo_class/index.html
@@ -10,7 +10,7 @@
     
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
     <div class="link_1">
-        <a href="#">Click Me</a>
+        <a href="">Click Me</a>
     </div>
     <br>    
     <a href="#">Click Me</a>
