--- a/Html/02_text_formating_tags/text_formating_tags.html
+++ b/Html/02_text_formating_tags/text_formating_tags.html
@@ -47,7 +47,7 @@
         Example:
              <p>This is a paragraph.</p>
 
-    Unpaired Tags (or Self-Closing Tags):
+    Unpaired Tags (or Self-Closing Tags or void elements):
 
         Unpaired tags, also known as self-closing tags, don't have a separate closing tag. They are used to insert standalone elements or void elements.
         Example: 
