--- a/Html/03_image_object/image_object.html
+++ b/Html/03_image_object/image_object.html
@@ -33,7 +33,11 @@
 
 
 <!-- 
+    HTML Entities
 
+    In HTML some characters are reserved like ‘<’, ‘>’, ‘/’, etc. 
+    To use these characters in our webpage we need to use the character entities called HTML Entities.
+    
     &lt; and &gt; are HTML character entities, also known as character references or escape codes. 
     They are used in HTML to display special characters that have a reserved meaning in HTML
  
