--- a/css/08_float/index.html
+++ b/css/08_float/index.html
@@ -7,39 +7,37 @@
     <style>
         /* Define styles for the floated elements */
         .box {
-            width: 150px;
+            width: 80%;
             height: 150px;
             margin: 10px;
             background-color: #3498db;
             color: #fff;
             text-align: center;
             line-height: 150px;
+            padding: 10px;
         }
 
         /* Float the first box to the left */
-        .box.left {
+       .left {
             float: left;
         }
 
         /* Float the second box to the right */
-        .box.right {
+        .right {
             float: right;
         }
 
-        /* Clear the float on the third box */
-        .box.clear {
-            clear: both;
-        }
+  
 
     </style>
 </head>
-<body>
+<body >
     <h1>CSS Float Properties Demo</h1>
-
-    <div class="box left">Left</div>
-    <div class="box right">Right</div>
-    <div class="box clear">Clear</div>
+    <div class="box">
+        <div class="left">Left</div>
+        <div class="right">Right</div>
+    </div>
    
-    <p>This is a demonstration of CSS float properties including <code>left</code>, <code>right</code>, <code>clear</code>.</p>
+    <p>This is a demonstration of CSS float properties including <code>left</code>, <code>right</code>.</p>
 </body>
 </html>
