--- a/css/02_selectors/selectors_index.html
+++ b/css/02_selectors/selectors_index.html
@@ -55,7 +55,8 @@
 
         /* Pseudo-element Selector */
         p::first-line {
-            font-weight: italic;
+            font-weight: bold;
+            background-color: rgb(66, 242, 27);
         }
     </style>
 </head>
