--- a/css/06_layout/block_inline_inlineblock.html
+++ b/css/06_layout/block_inline_inlineblock.html
@@ -37,9 +37,9 @@
     <div class="block">Block Element 01</div>
     <div class="block">Block Element 02</div>
     <hr>
-    <p>The inline class represents an inline element.  <span class="inline"> It's a element with padding and a background color.</span> Inline elements <span class="inline_blue" > flow within the content, </span>and they do not start on a new line. They stack horizontally.  </p>
+    <p>The inline class represents an inline element.  <span class="inline"> It's a element with padding and a background color.</span> Inline elements <span class="inline_blue" > flow within the content, </span>and they do not start on a new line. They stack horizontally.  
+    <span class="inline">Inline Element</span></p>
 
-    <span class="inline">Inline Element</span>
     <br><br><br>  <hr>  
     <p>The inline-block class represents an inline-block element. It's another element with a fixed width and height. Inline-block elements are similar to inline elements in that they flow within the content, but they can have specified dimensions and still flow horizontally.</p>
     <div class="inline-block">Inline-Block Element 01</div>
