--- a/css/07_positions/app/index.html
+++ b/css/07_positions/app/index.html
@@ -38,7 +38,7 @@
       <br><br>
       <p>Position relative to its default position</p>
     </div>
-    <div class="positioning-type absolute">
+    <div class="positioning-type absolute" style="position: relative;">
       
       <h2>Absolute Positioning</h2>
       <code>
@@ -61,9 +61,7 @@
       <div class="box"></div>
     </div>
   </main>
-  <footer>
-    <p>&copy; www.appbrewery.com</p>
-  </footer>
+
   <script>
     const staticBtn = document.getElementById('static-btn');
     const relativeBtn = document.getElementById('relative-btn');
