--- a/css/13_z_index/index.html
+++ b/css/13_z_index/index.html
@@ -12,7 +12,7 @@
   border: 2px solid black;
   height: 100px;
   margin: 30px;
-  background-color: aqua;
+  background-color: rgb(17, 20, 20);
 }
 
 .gray-box {
