--- a/css/12_var/index.html
+++ b/css/12_var/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 :root {
-  --blue: #1e90ff;
+  --blue: #3bba30;
   --white: #ffffff; 
 }
 
@@ -34,7 +34,7 @@ button {
 <body>
 
 <h1>Using the var() Function</h1>
-
+<h2>What is CSS Variables?</h2>
 <div class="container">
   <h2>CSS Variables</h2>
   <p>CSS variables have access to the DOM, which means that you can create variables with local or global scope, change the variables with JavaScript, and change the variables based on media queries.</p>
