--- a/css/07_positions/sticky.html
+++ b/css/07_positions/sticky.html
@@ -15,7 +15,7 @@
             color: #fff;
             padding: 10px;
             position: sticky;
-            top: 0;
+            top: 20px;
         }
 
         .content {
