--- a/css/09_flex_box/a.html
+++ b/css/09_flex_box/a.html
@@ -5,40 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .flex-container {
-            display: flex;
-            width: 100px;
-            height: 50px;
-            border: 1px solid black;
-            background-color: cadetblue;
-            flex-wrap: nowrap;
-        }
-
-        .item {
-            width: 20px;
-            height: 40px;
-            border: 1px solid black;
-            margin: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: aqua;
-        }
+    .flex-div{
+        display: flex;
+        background-color: red;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid black;
+    }
+    .flex-div-main{
+        display: flex;
+        background-color: rgb(114, 54, 244);
+        justify-content: center;
+        align-items: center;
+    }
     </style>
 </head>
-
 <body>
-    <div class="flex-container">
-        <div class="item" id="item1">1</div>
-        <div class="item" id="item2">2</div>
-        <div class="item" id="item3">3</div>
-        <div class="item" id="item2">2</div>
-        <div class="item" id="item3">3</div>
-        <div class="item" id="item1">1</div>
-        <div class="item" id="item2">2</div>
-        <div class="item" id="item3">3</div>
-        <div class="item" id="item2">2</div>
-        <div class="item" id="item3">3</div>
+    <div class="flex-div-main">
+        <div class="flex-div">
+            <ul>
+                <li>Hello</li>
+                <li>Hi</li>
+            </ul>
+        </div>
+        <div class="flex-div">
+            <ul>
+                <li>Hello</li>
+                <li>Hi</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
