--- a/dev/start/index.html
+++ b/dev/start/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- internal CSS -->
-     <!-- <style>
-         h1, p{
-             background-color: blue;
-             color: white;
-         }
-     </style> -->
-     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- inline CSS -->
-    <!-- <h1 style="background-color: blue;color: white;">hello h1</h1> -->
-    <h1>hello h1</h1>
-    <h1>hello h1 2.0</h1>
-    <p>Hola</p>
-</body>
+  </head>
+  <style>
+    #container {
+      display: grid;
+      background-color: aqua;
+      height: 400px;
+      width: 450px;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+      grid-gap: 2px;
+    }
+    .grid-item-big {
+      background-color: yellowgreen;
+      grid-column-start: 1;
+      grid-column-end: 4;
+      grid-row-start: 1;
+      grid-row-end: 3;
+    }
+    .grid-item-small {
+      background-color: red;
+    }
+
+    .grid-item-medium {
+      background-color: darkgreen;
+      grid-row-start: 3;
+      grid-row-end: 5;
+      grid-column-start: 2;
+      grid-column-end: 3;
+    }
+  </style>
+  <body>
+    <div id="container">
+      <div class="grid-item-big"></div>
+      <div class="grid-item-small"></div>
+      <div class="grid-item-medium"></div>
+      <div class="grid-item-small"></div>
+      <div class="grid-item-small"></div>
+      <div class="grid-item-small"></div>
+    </div>
+  </body>
 </html>
